--- a/plugins/adminUsers/webPages/login.ejs
+++ b/plugins/adminUsers/webPages/login.ejs
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <%- bootstrapCss %>
+     <!-- CSS personalizzato del tema (se presente) -->
+    <% if (customCss) { %>
+    <style>
+        <%- customCss %>
+    </style>
+    <% } %>
 </head>
 <body>
     <%- apiPrefix %>
